# cadabra2-jupyter

./: .gitignore  README.md  pyproject.toml  setup.py
cadabra2jupyter/: __main__.py  context.py  kernel.json  kernel.py  kernel_server.py  utils.py
client_server/cadabra2jupyter/: cadabra_translator.cc  cadabra_translator.hh
client_server/cadabra2jupyter/swig/: cadabra_translator.i  setup.py.in
client_server/jupyter/: CMakeLists.txt
client_server/jupyter/swig/: CMakeLists.txt
kernel/: kernel.json
